2009-01-04  Martin Nordholts  <martinn@svn.gnome.org>

	Bug 562818 – First image opened in GIMP offset

	* app/display/gimpdisplayshell.c (gimp_display_shell_shrink_wrap):
	Only rely on disp_width/height for border calculation if they are
	larger than 1. If not, special-case the calculation so we don't
	get a severly mispositioned image.

2009-01-04  Martin Nordholts  <martinn@svn.gnome.org>

	* app/display/gimpdisplayshell.c (gimp_display_shell_shrink_wrap):
	Rename border_x to border_width and border_y to border_height.

2009-01-04  Martin Nordholts  <martinn@svn.gnome.org>

	Bug 562213 – Align Tool doesn't work properly if it is the active
	tool at startup

	* app/tools/gimpaligntool.c: Perform NULL-pointer dodging to avoid
	crashing.

2009-01-04  Martin Nordholts  <martinn@svn.gnome.org>

	* app/widgets/gimpdock.[ch]: Make instance members private.

	(gimp_dock_get_context)
	(gimp_dock_get_dialog_factory)
	(gimp_dock_get_dockbooks)
	(gimp_dock_get_main_vbox)
	(gimp_dock_get_vbox)
	(gimp_dock_get_id): New getters.

	* app/actions/actions.c
	* app/actions/dockable-actions.c
	* app/actions/dockable-commands.c
	* app/actions/windows-actions.c
	* app/menus/windows-menu.c
	* app/widgets/gimpdialogfactory.c
	* app/widgets/gimpdock.c
	* app/widgets/gimpdock.h
	* app/widgets/gimpdockable.c
	* app/widgets/gimpdockbook.c
	* app/widgets/gimpdockseparator.c
	* app/widgets/gimpimagedock.c
	* app/widgets/gimpmenudock.c
	* app/widgets/gimpsessioninfo-book.c
	* app/widgets/gimpsessioninfo-dock.c
	* app/widgets/gimpsessioninfo-dockable.c
	* app/widgets/gimptoolbox-color-area.c
	* app/widgets/gimptoolbox-dnd.c
	* app/widgets/gimptoolbox-image-area.c
	* app/widgets/gimptoolbox-indicator-area.c
	* app/widgets/gimptoolbox.c: Use new getters.

2009-01-03  Martin Nordholts  <martinn@svn.gnome.org>

	* app/widgets/gimpcontainertreeview.c: Format static function
	prototypes.

2009-01-01  Sven Neumann  <sven@gimp.org>

	* app/tools/gimptexttool.c: removed unused include.
